--- a/Notebook/Aufgabe1.ipynb
+++ b/Notebook/Aufgabe1.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,18 +157,12 @@
     "\n",
     "$$\n",
     "a(A_\\varphi, v) = \\int_\\Omega \\sigma_j \\omega A_\\varphi v \\, d\\Omega + \\int_\\Omega \\mu^{-1} r \\frac{\\partial (r A_\\varphi)}{\\partial r} \\frac{\\partial v}{\\partial r} \\, d\\Omega + \\int_\\Omega \\mu^{-1} \\frac{\\partial A_\\varphi}{\\partial z} \\frac{\\partial v}{\\partial z} \\, d\\Omega\n",
-    "$$\n",
-    "\n",
-    "Der Lastvektor  $f(v)$  ist gegeben durch:\n",
-    "\n",
-    "$$\n",
-    "f(v) = \\int_\\Omega j_\\varphi v \\, d\\Omega\n",
-    "$$\n"
+    "$$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,13 +174,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1ce36745a5bb4fabb1db8c1c0278dcd9",
+       "model_id": "c47b07d78b6d4592929b9e41b3d46e0f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -203,7 +197,7 @@
        "BaseWebGuiScene"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,11 +211,12 @@
     "uz, ur = grad(u)\n",
     "vz, vr = grad(v) \n",
     "\n",
-    "a = BilinearForm(V) # Inegral über Omega\n",
-    "a += (nu*(1/r*u+ur)*vr + nu*uz*vz)*dx\n",
-    "a += 1j*omega*sigma*u*v*dx(definedon=mesh.Materials('copper|core'))\n",
+    "#Schwache Gleichung als bilinear Form\n",
+    "a = BilinearForm(V)\n",
+    "a += (nu*(1/r*u+ur)*vr + nu*uz*vz)*dx # erster Bilinear term\n",
+    "a += 1j*omega*sigma*u*v*dx(definedon=mesh.Materials('copper|core')) # zweiter Bilinear term\n",
     "\n",
-    "Jimp = CoefficientFunction([0,ic/(r_wire**2*pi),0])\n",
+    "Jimp = CoefficientFunction([0,ic/(r_wire**2*pi),0]) # Richtung und Stärke des Stroms al Impuls angegeben\n",
     "\n",
     "f = LinearForm(V)\n",
     "f += Jimp*v*dx(definedon=mesh.Materials('copper'))\n",
@@ -278,137 +273,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f78466386d254fd786777ff8ea927195",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "WebGuiWidget(layout=Layout(height='500px', width='100%'), value={'gui_settings': {}, 'ngsolve_version': '6.2.2…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "BaseWebGuiScene"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5*(coef class ngfem::NormCoefficientFunctionC, real\n",
+      "  coef innerproduct, fix size = 1, complex\n",
+      "    coef binary operation '+', complex\n",
+      "      coef binary operation '*', complex\n",
+      "        coef unary operation ' ', real\n",
+      "          coef class ngfem::DomainWiseCoefficientFunction, real\n",
+      "            coef ZeroCF, real\n",
+      "            coef 5.6e+07, real\n",
+      "            coef 5.6e+07, real\n",
+      "        coef class ngfem::ScaleCoefficientFunctionC, complex\n",
+      "          coef class ngcomp::S_GridFunction<class std::complex<double> >, complex\n",
+      "      coef unary operation ' ', real\n",
+      "        coef class ngfem::DomainWiseCoefficientFunction, real\n",
+      "          coef ZeroCF, real\n",
+      "          coef 3.1831e+06, real\n",
+      "          coef ZeroCF, real\n",
+      "    coef unary operation 'conj', complex\n",
+      "      coef class ngfem::ScaleCoefficientFunctionC, complex\n",
+      "        coef class ngcomp::S_GridFunction<class std::complex<double> >, complex\n",
+      ")\n"
+     ]
     }
    ],
    "source": [
     "### Listing 3 : Berechnung der induktiven Wärmequelle\n",
-    "Ez = -1j*omega*gfu\n",
-    "Jz = sigma*Ez\n",
+    "Ez = -1j*omega*gfu  # Elektrische Feldstärke\n",
+    "Jz = sigma*Ez       # Elektrischer Strom\n",
     "Jtot = Jz + Jimp\n",
-    "Qe = 1/2*Norm(InnerProduct(Jtot,Conj(Ez)))\n",
-    "\n",
-    "Qe = CoefficientFunction(Qe,)\n",
-    "\n",
-    "Draw(Qe, mesh)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### Listing 4 : FE-Raum für die Temperaturverteilung\n",
-    "V2 = H1(mesh, order = 4, dirichlet = 'outer')\n",
-    "uT,vT = V2.TnT()\n",
-    "gfT = GridFunction(V2)\n",
+    "Qe = 1/2*Norm(InnerProduct(Jtot,Conj(Ez))) # Induktive Wärmequelle\n",
+    "print(Qe)\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### Listing 5 : Bilinearform Temperaturfeld\n",
-    "aT = BilinearForm(V2)\n",
-    "aT += lam*grad(uT)*grad(vT)*dx\n",
-    "\n",
-    "fT = LinearForm(V2)\n",
-    "fT += Qe*vT*dx\n",
-    "\n",
-    "aT.Assemble()\n",
-    "fT.Assemble()\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### Listing 6 : Geometrie Beispiel\n",
-    "from netgen.geom2d import SplineGeometry\n",
-    "l_air = 0.1\n",
-    "r_wire = 0.001\n",
-    "nx_wire = 10\n",
-    "ny_wire = 3\n",
-    "dxdy_wire = 0.5*r_wire\n",
-    "\n",
-    "rA_core = 0.01\n",
-    "rI_core = 0.008\n",
-    "l_core = 0.08\n",
-    "epsZero = 1e-8\n",
-    "\n",
-    "geo = SplineGeometry()\n",
-    "geo.AddRectangle(p1=(-l_air/2,epsZero),\n",
-    "                 p2=(l_air/2,l_air/2),\n",
-    "                 bcs=[\"rotsym\",\"outer\",\"outer\",\"outer\"],\n",
-    "                 leftdomain=1,\n",
-    "                 rightdomain=0)\n",
-    "pts = []\n",
-    "for i in range(nx_wire):\n",
-    "    for j in range(ny_wire):\n",
-    "        pts.append([\n",
-    "            i*(2*r_wire+dxdy_wire), \n",
-    "            rA_core+dxdy_wire+r_wire+j*(2*r_wire+dxdy_wire)\n",
-    "        ])\n",
-    "        geo.AddCircle(\n",
-    "            c=(i*(2*r_wire+dxdy_wire), \n",
-    "               rA_core+dxdy_wire+r_wire+j*(2*r_wire+dxdy_wire)),\n",
-    "            r=r_wire, bc=\"inner\",\n",
-    "            leftdomain=2,\n",
-    "            rightdomain=1)\n",
-    "pts = np.array(pts)\n",
-    "geo.AddRectangle(p1=(-l_core/2,rI_core),\n",
-    "                 p2=(l_core/2,rA_core),\n",
-    "                 bc=\"inner\",\n",
-    "                 leftdomain=3,\n",
-    "                 rightdomain=1)\n",
-    "geo.SetMaterial (1, \"air\")\n",
-    "geo.SetMaterial (2, \"copper\")\n",
-    "geo.SetMaterial (3, \"core\")\n",
-    "geo.SetDomainMaxH(3,(rA_core-rI_core)/2)\n",
-    "\n",
-    "mesh = Mesh(geo.GenerateMesh(maxh=0.0025))\n",
-    "\n",
-    "### Listing 7 : Definition der vom Gebiet abhängigen Materialparameter.\n",
-    "omega = 2*pi*50\n",
-    "mu0 = 4*pi*1e-7\n",
-    "\n",
-    "sigmaCu = 56e6\n",
-    "sigmaCore = 56e6 #Kupfer\n",
-    "sigma = CoefficientFunction([0, sigmaCu, sigmaCore])\n",
-    "mur = CoefficientFunction([1,1,1])\n",
-    "nu = CoefficientFunction(1/mu0*1/mur)"
    ]
   }
  ],
