--- a/Notebook/Aufgabe1.ipynb
+++ b/Notebook/Aufgabe1.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,13 +70,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e5a1477d855a4a7395247244920dc16e",
+       "model_id": "72c1b2e975f849d6ae530721ec3d9174",
        "version_major": 2,
        "version_minor": 0
       },
@@ -93,7 +93,7 @@
        "BaseWebGuiScene"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +224,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "88184dec5a8a43379d6e7ab98f8122ba",
+       "model_id": "81398fe891754397a24bb865622a0eca",
        "version_major": 2,
        "version_minor": 0
       },
@@ -241,7 +241,7 @@
        "BaseWebGuiScene"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +298,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4a4306ca6ea1432cbe646241bf2d60a2",
+       "model_id": "ac8d8a6485b049f4809b7f03c77ad45f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -319,7 +319,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cf31298f92294649968eb9b2e498f981",
+       "model_id": "f89d10b2bb0f45e1ad9e526bc4241ccd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -340,7 +340,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b980d4bcbc8a4e79b9d83ed80416a2e1",
+       "model_id": "42d1ba7ba76842f0944f21fd295a2844",
        "version_major": 2,
        "version_minor": 0
       },
@@ -352,35 +352,15 @@
      "output_type": "display_data"
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "B (Norm):\n"
+     "ename": "NameError",
+     "evalue": "name 'Vreal' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[6], line 28\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mB = (B_z, B_r) (Vector):\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     26\u001b[0m Draw(B_field, mesh, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mB (Vector Field)\u001b[39m\u001b[38;5;124m\"\u001b[39m, vectors\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[0;32m---> 28\u001b[0m B_field_mag \u001b[38;5;241m=\u001b[39m GridFunction(\u001b[43mVreal\u001b[49m)\n\u001b[1;32m     29\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mB (Norm):\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     30\u001b[0m Draw(Norm(B_field), mesh, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mB (complex)\u001b[39m\u001b[38;5;124m\"\u001b[39m, vectors\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'Vreal' is not defined"
      ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fea7d51f3bdc4db4bf5720a01aa399aa",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "WebGuiWidget(layout=Layout(height='50vh', width='100%'), value={'gui_settings': {}, 'ngsolve_version': '6.2.24…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "BaseWebGuiScene"
-      ]
-     },
-     "execution_count": 86,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -411,7 +391,6 @@
     "print(\"B = (B_z, B_r) (Vector):\")\n",
     "Draw(B_field, mesh, \"B (Vector Field)\", vectors=True)\n",
     "\n",
-    "B_field_mag = GridFunction(Vreal)\n",
     "print(\"B (Norm):\")\n",
     "Draw(Norm(B_field), mesh, \"B (complex)\", vectors=True)\n"
    ]
@@ -462,85 +441,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Info: InnerProduct has been changed and takes now conjugate\n",
-      "since c2 is already a Conjugate operation, we don't take conjugate\n",
-      "is you don't want conjugate, use a*b\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "584ee89bee1f4825a64bdc1d36ee00c4",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "WebGuiWidget(layout=Layout(height='50vh', width='100%'), value={'gui_settings': {}, 'ngsolve_version': '6.2.24…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "861ba733b9684c67877b2df235922120",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "WebGuiWidget(layout=Layout(height='50vh', width='100%'), value={'gui_settings': {}, 'ngsolve_version': '6.2.24…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "af424c2cc41248cfb22b700b702643d7",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "WebGuiWidget(layout=Layout(height='50vh', width='100%'), value={'gui_settings': {}, 'ngsolve_version': '6.2.24…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "79f5d9a9db6c44de960076c6553d0b82",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "WebGuiWidget(layout=Layout(height='50vh', width='100%'), value={'gui_settings': {}, 'ngsolve_version': '6.2.24…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "BaseWebGuiScene"
-      ]
-     },
-     "execution_count": 126,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "### Listing 3 : Berechnung der induktiven Wärmequelle\n",
     "Ez = -1j*omega*gfu  # Elektrische Feldstärke\n",
