--- a/Notebook/Aufgabe1.ipynb
+++ b/Notebook/Aufgabe1.ipynb
@@ -76,7 +76,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "72c1b2e975f849d6ae530721ec3d9174",
+       "model_id": "a85fd437dccf4a85b3b06eaaa32f9abf",
        "version_major": 2,
        "version_minor": 0
       },
@@ -224,7 +224,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "81398fe891754397a24bb865622a0eca",
+       "model_id": "43f5e5d804364e93b4ea4b7ef979498d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -298,7 +298,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ac8d8a6485b049f4809b7f03c77ad45f",
+       "model_id": "36e5ddd4f33d455baef90b326c9a07fe",
        "version_major": 2,
        "version_minor": 0
       },
@@ -319,7 +319,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f89d10b2bb0f45e1ad9e526bc4241ccd",
+       "model_id": "0440c976da1141daa7bb705ce1403418",
        "version_major": 2,
        "version_minor": 0
       },
@@ -340,7 +340,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "42d1ba7ba76842f0944f21fd295a2844",
+       "model_id": "e60c0a5e54924c9d8532fc916ee6afa5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -352,15 +352,35 @@
      "output_type": "display_data"
     },
     {
-     "ename": "NameError",
-     "evalue": "name 'Vreal' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[6], line 28\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mB = (B_z, B_r) (Vector):\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     26\u001b[0m Draw(B_field, mesh, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mB (Vector Field)\u001b[39m\u001b[38;5;124m\"\u001b[39m, vectors\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[0;32m---> 28\u001b[0m B_field_mag \u001b[38;5;241m=\u001b[39m GridFunction(\u001b[43mVreal\u001b[49m)\n\u001b[1;32m     29\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mB (Norm):\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     30\u001b[0m Draw(Norm(B_field), mesh, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mB (complex)\u001b[39m\u001b[38;5;124m\"\u001b[39m, vectors\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'Vreal' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "B (Norm):\n"
      ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "35f7be4976f24a2eb331b41d99d7a096",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "WebGuiWidget(layout=Layout(height='50vh', width='100%'), value={'gui_settings': {}, 'ngsolve_version': '6.2.24…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "BaseWebGuiScene"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -403,17 +423,19 @@
     "Die Formel (7) für die induktive Wärmequelle lautet:\n",
     "\n",
     "$$\n",
-    "q = \\frac{1}{2} | \\mathbf{J} \\cdot \\mathbf{E} | = \\frac{\\sigma}{2} |\\mathbf{E}|^2\n",
+    "q = \\frac{1}{2} | \\mathbf{J} \\cdot \\mathbf{E} | = \\frac{\\sigma}{2} |\\mathbf{E}|^2 \n",
     "$$\n",
     "\n",
     "Dabei gilt:\n",
     "\n",
-    "$\\sigma$ ist die elektrische Leitfähigkeit (z. B. $56 \\times 10^6 \\, \\text{S/m}$ für Kupfer)\n",
+    "$\\sigma$ ist die elektrische Leitfähigkeit (z. B. $56 \\times 10^6 \\, \\text{S/m}$ für Kupfer).\n",
     "\n",
-    "$\\mathbf{E}$ ist das elektrische Feld\n",
+    "$\\mathbf{E}$ ist das elektrische Feld.\n",
+    "\n",
+    "> Die Vereinfachung $\\frac{1}{2} | \\mathbf{J} \\cdot \\mathbf{E} | = \\frac{\\sigma}{2} |\\mathbf{E}|^2 $ gilt nur, wenn $\\mathbf{J}_{\\text{ext}} = 0$ ist. **Stimmt das?**\n",
     "\n",
     "$$\n",
-    "\\mathbf{J} = \\sigma \\mathbf{E} \\quad \\text{(Ohmsches Gesetz für Leiter)}\n",
+    "\\mathbf{J}_{\\text{int}} = \\sigma \\mathbf{E} \\quad \\text{(Ohmsches Gesetz für Leiter)}\n",
     "$$\n",
     "\n",
     "Die Größe $q$ beschreibt die Wärmeerzeugung pro Volumen $(\\text{W/m}^3)$ aufgrund des induktiven Joule-Effekts.\n",
@@ -423,6 +445,15 @@
     "$$\n",
     "\\mathbf{E} = -j \\omega A_\\phi \\quad \\text{(laut Formel (6))}\n",
     "$$\n",
+    "\n",
+    "Nun wird eine Formel für $q$ abhängig von $\\sigma$, $\\omega$ und $A_\\phi$ hergeleitet.\n",
+    "\n",
+    "$$ \\begin{align}\n",
+    "q &= \\frac{1}{2} | \\mathbf{J} \\cdot \\mathbf{E} | = \\frac{1}{2} | (\\mathbf{J}_{\\text{int}} + \\mathbf{J}_{\\text{ext}})\\cdot \\mathbf{E} | \\\\\n",
+    "&= \\frac{1}{2} | \\mathbf{J}_{\\text{int}} \\cdot \\mathbf{E} + \\mathbf{J}_{\\text{ext}}\\cdot \\mathbf{E} | \\\\\n",
+    "&= \\frac{1}{2} | \\sigma \\mathbf{E} \\cdot \\mathbf{E}^* + \\mathbf{J}_{\\text{ext}}\\cdot \\mathbf{E} | \\\\\n",
+    "\\end{align}$$\n",
+    "\n",
     "\n",
     "Da wir das Quadrat des Betrags benötigen:\n",
     "\n",
@@ -436,14 +467,102 @@
     "q = \\frac{\\sigma}{2} \\omega^2 |A_\\phi|^2\n",
     "$$\n",
     "\n",
-    "> stimmt so nicht, weil J = Jexp + J int"
+    "> stimmt so nicht, weil J = Jexp + Jint\n",
+    "\n",
+    "Gleiches Resultat wie vorgegebener Code.\n",
+    "\n",
+    "\n",
+    "Fragen:\n",
+    "- Woher kommt $E^2$? Fehlt nicht Jext?\n",
+    "- InnerProduct Fehlermeldung: Info: InnerProduct has been changed and takes now conjugate\n",
+    "since c2 is already a Conjugate operation, we don't take conjugate\n",
+    "is you don't want conjugate, use a*b\n",
+    "- Herleitung falsch?\n",
+    "- Wieso `Conj(Ez)` auch für Jexp???\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Info: InnerProduct has been changed and takes now conjugate\n",
+      "since c2 is already a Conjugate operation, we don't take conjugate\n",
+      "is you don't want conjugate, use a*b\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "213d536ca265450b9133f0af2ea646cf",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "WebGuiWidget(layout=Layout(height='50vh', width='100%'), value={'gui_settings': {}, 'ngsolve_version': '6.2.24…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "71b5b2717a3e400f960d33a107e23508",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "WebGuiWidget(layout=Layout(height='50vh', width='100%'), value={'gui_settings': {}, 'ngsolve_version': '6.2.24…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "822d232f55ef471d97d0ca190ba59077",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "WebGuiWidget(layout=Layout(height='50vh', width='100%'), value={'gui_settings': {}, 'ngsolve_version': '6.2.24…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0ce3c34024e44256addc659a3001e78e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "WebGuiWidget(layout=Layout(height='50vh', width='100%'), value={'gui_settings': {}, 'ngsolve_version': '6.2.24…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "BaseWebGuiScene"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "### Listing 3 : Berechnung der induktiven Wärmequelle\n",
     "Ez = -1j*omega*gfu  # Elektrische Feldstärke\n",
@@ -453,7 +572,7 @@
     "#print(Qe)\n",
     "Draw(Qe, mesh)\n",
     "\n",
-    "Q2 = 1/2 * sigma * Norm(gfu)**1\n",
+    "Q2 = 1/2 * sigma * omega**2 * Norm(gfu)**2\n",
     "#Q2 = 1/2 * Norm(sigma * InnerProduct(Ez, Conj(Ez)) + Jimp*Ez)\n",
     "Draw(Q2, mesh)\n",
     "\n",
