--- a/Notebook/Aufgabe1.ipynb
+++ b/Notebook/Aufgabe1.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,13 +75,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "939b26ffd703446bb01b05ed4f0db392",
+       "model_id": "ae913be54e304eafac82f9a28d72b842",
        "version_major": 2,
        "version_minor": 0
       },
@@ -98,7 +98,7 @@
        "BaseWebGuiScene"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c305d1fb76fd467ebce9eae2e13a69aa",
+       "model_id": "30bb545ff374432a98c6da49f3dc0e68",
        "version_major": 2,
        "version_minor": 0
       },
@@ -246,7 +246,7 @@
        "BaseWebGuiScene"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +303,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "55d0c77b73bd488e8343315ca5ffef36",
+       "model_id": "0af7781dfc804abb91027db5b6333339",
        "version_major": 2,
        "version_minor": 0
       },
@@ -324,7 +324,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2b968556fe28413a9b98da948650732c",
+       "model_id": "374dd5d7dd5f4d34b44d71d90672ea1a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -345,7 +345,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6c3f1370e335419baf67eb4045c8b25d",
+       "model_id": "a0a36493c710494caab5b6c81a23df53",
        "version_major": 2,
        "version_minor": 0
       },
@@ -366,7 +366,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d10e259e72dc4ef1b3e951d14d6f69cd",
+       "model_id": "4db9ac553bad4d88acd3eee163d2bbff",
        "version_major": 2,
        "version_minor": 0
       },
@@ -383,7 +383,7 @@
        "BaseWebGuiScene"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -572,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -619,13 +619,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cf4c9df1498047599a3eb92beb6b321c",
+       "model_id": "7d8c7a2b96f741e3af73c666861af6a6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -642,7 +642,7 @@
        "BaseWebGuiScene"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -655,6 +655,38 @@
     "Qe = 1/2*Norm(InnerProduct(Jtot,Ez)) # Induktive Wärmequelle\n",
     "\n",
     "Draw(Qe, mesh)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f7c15a019f6546529255aa09f9df05de",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "WebGuiWidget(layout=Layout(height='50vh', width='100%'), value={'gui_settings': {}, 'ngsolve_version': '6.2.24…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "V2 = L2(mesh, order=4)\n",
+    "gf = GridFunction(V2)\n",
+    "gf.Set(Qe)\n",
+    "Draw(gf, mesh)\n",
+    "\n",
+    "# Now save as above\n",
+    "np.save(\"qe_export.npy\", gf.vec.FV().NumPy())\n",
+    "gf.Save(\"qe_gf.gf\")\n",
+    "mesh.ngmesh.Save(\"my_mesh.vol\")"
    ]
   }
  ],
