--- a/Notebook/Aufgabe2.ipynb
+++ b/Notebook/Aufgabe2.ipynb
@@ -53,7 +53,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5faa99693fa34a6c92cc289809af42e8",
+       "model_id": "cf9e0a54b0cc40e696c75f3598297133",
        "version_major": 2,
        "version_minor": 0
       },
@@ -91,7 +91,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5e63096609dc4d5bb4143bf0660ea5c0",
+       "model_id": "481e1eafbbb9449ab1e78fca5129c8d0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -138,7 +138,7 @@
     {
      "data": {
       "text/plain": [
-       "<ngsolve.comp.LinearForm at 0x10f8bd7f0>"
+       "<ngsolve.comp.LinearForm at 0x10f52d3f0>"
       ]
      },
      "execution_count": 7,
@@ -152,6 +152,7 @@
     "\n",
     "fT = LinearForm(V2)\n",
     "fT += Qe*vT*dx\n",
+    "#fT += lam*(-1)*vT*ds(definedon=mesh.Boundaries('outer'))\n",
     "\n",
     "aT.Assemble()\n",
     "fT.Assemble()"
@@ -159,14 +160,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "8d74538a-c851-494c-b47c-f49ac4ad8f25",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f9d59080254e46dc85729f30a147d15c",
+       "model_id": "6a07452403e743b79fb244dfacbfc1d5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -183,7 +184,7 @@
        "BaseWebGuiScene"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
