added robin boundaries

--- a/Notebook/Aufgabe1.ipynb
+++ b/Notebook/Aufgabe1.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
     "# Mesh Generation\n",
     "l_air = 0.1         # Grosse der dargestellten Luft um denn Versuchsaufbau\n",
     "r_wire = 0.001      # Drahtdurchmesser in Metern\n",
-    "nx_wire = 10        # Anzahl Kabel in X-Richtung\n",
+    "nx_wire = 10 #10        # Anzahl Kabel in X-Richtung\n",
     "ny_wire = 3         # Anzahl Kabel in Y-Richtung\n",
     "dxdy_wire = 0.5*r_wire\n",
     "\n",
@@ -75,13 +75,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ae913be54e304eafac82f9a28d72b842",
+       "model_id": "e2c41cc4f2174f7380360bb8a5478db0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -93,21 +93,18 @@
      "output_type": "display_data"
     },
     {
-     "data": {
-      "text/plain": [
-       "BaseWebGuiScene"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('rotsym', 'outer_right', 'outer_top', 'outer_left', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner')\n"
+     ]
     }
    ],
    "source": [
     "geo = SplineGeometry()\n",
     "geo.AddRectangle(p1=(-l_air/2,epsZero),\n",
     "                 p2=(l_air/2,l_air/2),\n",
-    "                 bcs=[\"rotsym\",\"outer\",\"outer\",\"outer\"],\n",
+    "                 bcs=[\"rotsym\",\"outer_right\",\"outer_top\",\"outer_left\"],\n",
     "                 leftdomain=1,\n",
     "                 rightdomain=0)\n",
     "pts = []\n",
@@ -139,7 +136,8 @@
     "# Visualisierung\n",
     "mat_mapping = {name: i+1 for i, name in enumerate(mesh.GetMaterials())}\n",
     "cf = mesh.MaterialCF(mat_mapping)\n",
-    "Draw(cf, mesh, \"material_colors\")"
+    "Draw(cf, mesh, \"material_colors\")\n",
+    "print(mesh.GetBoundaries())"
    ]
   },
   {
@@ -204,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +227,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "30bb545ff374432a98c6da49f3dc0e68",
+       "model_id": "af305ace9d15419eac06c87531cda763",
        "version_major": 2,
        "version_minor": 0
       },
@@ -246,7 +244,7 @@
        "BaseWebGuiScene"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +301,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0af7781dfc804abb91027db5b6333339",
+       "model_id": "118e549ffc03411ca8bf4ca263e78212",
        "version_major": 2,
        "version_minor": 0
       },
@@ -324,7 +322,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "374dd5d7dd5f4d34b44d71d90672ea1a",
+       "model_id": "8a95851aa62b4a8b8ff49c23dd95cc65",
        "version_major": 2,
        "version_minor": 0
       },
@@ -345,7 +343,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a0a36493c710494caab5b6c81a23df53",
+       "model_id": "73db8c34b2b84e1ebfa4fcb289586a76",
        "version_major": 2,
        "version_minor": 0
       },
@@ -366,7 +364,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4db9ac553bad4d88acd3eee163d2bbff",
+       "model_id": "1888369eb83246548c9e4d9a590ef37b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -383,7 +381,7 @@
        "BaseWebGuiScene"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -572,12 +570,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "writer_gif = PillowWriter(fps=20)\n",
-    "ani.save(\"animation.gif\", writer=writer_gif)"
+    "#writer_gif = PillowWriter(fps=20)\n",
+    "#ani.save(\"animation.gif\", writer=writer_gif)"
    ]
   },
   {
@@ -619,13 +617,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7d8c7a2b96f741e3af73c666861af6a6",
+       "model_id": "72566b56e1ee4892b44c33c5bd6988da",
        "version_major": 2,
        "version_minor": 0
       },
@@ -642,7 +640,7 @@
        "BaseWebGuiScene"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -659,13 +657,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f7c15a019f6546529255aa09f9df05de",
+       "model_id": "c03a6025639c4ca68f614a397214a773",
        "version_major": 2,
        "version_minor": 0
       },
